[gd_scene load_steps=6 format=2]

[ext_resource path="res://Imagens/avatarBumba.png" type="Texture" id=1]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Codigos/tutoriais/tutorialCena.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="tutorialCena" type="Node2D"]
script = ExtResource( 4 )

[node name="fundo" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.411765 )

[node name="fundo3" type="ColorRect" parent="fundo"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.411765 )

[node name="fundo2" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = 701.0
margin_right = 1918.0
margin_bottom = 942.0
color = Color( 0.956863, 0.929412, 0.929412, 0.411765 )

[node name="fundo3" type="ColorRect" parent="fundo2"]
margin_right = 1915.0
margin_bottom = 241.0
color = Color( 0.956863, 0.929412, 0.929412, 0.411765 )

[node name="caixaDialogo" type="Label" parent="."]
margin_left = 722.0
margin_top = 592.0
margin_right = 1840.0
margin_bottom = 1024.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="spriteBoi" type="Sprite" parent="."]
position = Vector2( 395, 599 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="botaoPassar" type="Button" parent="."]
margin_left = 3.0
margin_top = -5.0
margin_right = 1923.0
margin_bottom = 1075.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
icon_align = 1
expand_icon = true

[connection signal="pressed" from="botaoPassar" to="." method="_on_botaoPassar_pressed"]
